--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,9 @@
     "type": "project",
     "require": {
         "php": "^8.0",
-        "laravel/lumen-framework": "^9.0"
+        "firebase/php-jwt": "^6.3",
+        "laravel/lumen-framework": "^9.0",
+        "paragonie/sodium_compat": "^1.17"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
